src/objects/Position_Approval_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver #1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00Nj00000010qGZEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00Nj00000010qGcEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver #3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00Nj00000010qGaEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routing_Key__c</fullName>
        <label>Routing Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Position Approval Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RoutingID-{0000}</displayFormat>
        <label>Routing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Position Approval Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>